<resources>
    <string name="app_name">Music Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="track_cover">track cover</string>
    <string name="more">more</string>
    <string name="equalizer">Equalizer</string>
    <string name="settings">Settings</string>
    <string name="sorted_by">Sorted By</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="information">Information</string>
    <string name="about_app">About App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
</resources>